--- a/templates/player.html
+++ b/templates/player.html
@@ -338,6 +338,10 @@ This is the template for the main player page, called from ratings.views.player.
             <div class="rowel">Matches played</div>
             <div class="rower">{{ totalmatches }} ({{ offlinematches|pctg:totalmatches }}% offline)</div>
         </div>
+        <div class="row">
+            <div class="rowel">Current Streak</div>
+            <div class="rower">{{stvA}}</div>
+        </div>
         {% if player.mcnum or player.mcnum == 0 %}
         <div class="row">
             <div class="rowel">MC number</div>
