added tags, css and html for current Streak info box

--- a/templates/css/base.css
+++ b/templates/css/base.css
@@ -583,6 +583,15 @@ select.small {
     width: 15em;
 }
 
+/* Streaks */
+.positive {
+    color: green;
+}
+
+.negative {
+    color: red;
+}
+
 /* PERCENTAGES */
 
 .progress {
