--- a/templates/player.html
+++ b/templates/player.html
@@ -340,7 +340,7 @@ This is the template for the main player page, called from ratings.views.player.
         </div>
         <div class="row">
             <div class="rowel">Current Streak</div>
-            <div class="rower">{{stvA}}</div>
+            <div class="rower {{stvA|streak_css_class}}">{{stvA|positive_sign}}</div>
         </div>
         {% if player.mcnum or player.mcnum == 0 %}
         <div class="row">
